[project]
name = "edgex-grid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]",
    "websockets",
    "pydantic>=2",
    "tenacity",
    "loguru",
    "rich",
    "sqlalchemy",
    "aiosqlite",
    "PyYAML",
    "python-dotenv",
    "ecdsa",
    "starknet_py",
    "edgex-python-sdk",
    "requests",
    "fastecdsa>=3.0.1",
]
